--- a/zone/static/zone/styles.css
+++ b/zone/static/zone/styles.css
@@ -11,6 +11,7 @@ body{
 #logo{
     margin-top: 0%;
     padding-top: 0%;
+    margin-right: 20%;
     text-align: center;
 }
 
@@ -31,6 +32,10 @@ h4{
 form{
     width: 100%;
     text-align: center;
+}
+
+.translation{
+    text-align: right;
 }
 
 .content{
