--- a/zone/templates/zone/index.html
+++ b/zone/templates/zone/index.html
@@ -21,8 +21,8 @@
     <div class="container-fluid">
         <div class="d-flex justify-content-end">
             <span >
-                <a href="{% url 'english' %}">English</a>
-                <a id="french" href="{% url 'french' %}">French</a>
+                <img src="{% static 'zone/img/united-kingdom.png' %}" alt="English"> <a href="{% url 'english' %}">English</a>
+                <img src="{% static 'zone/img/france.png' %}" alt="French"><a id="french" href="{% url 'french' %}">French</a>
             </span>
         </div>
         <div id="logo">
