--- a/zone/templates/zone/index.html
+++ b/zone/templates/zone/index.html
@@ -89,7 +89,7 @@
                         <div class="carousel-item active">
                             <div class="row">
                                 <div class="col">
-                                    <img class="c-img" src="{% static 'zone/img/baobabfruit.png' %}" alt="1 slide">
+                                    <img class="c-img" src="{% static 'zone/img/african-baobab.jpg' %}" alt="1 slide">
                                     <h4>{% trans "Baobab fruit" %}</h4>
                                 </div>
                                 <div class="col">
@@ -97,7 +97,7 @@
                                     <h4>{% trans "Pure Honey" %}</h4>
                                 </div>
                                 <div class="col">
-                                    <img class="c-img" src="{% static 'zone/img/ses.png' %}" alt="3 slide">
+                                    <img class="c-img" src="{% static 'zone/img/sesame1.jpg' %}" alt="3 slide">
                                     <h4>{% trans "Sesame Seeds" %}</h4>
                                 </div>
                             </div>
@@ -109,12 +109,12 @@
                                     <h4>{% trans "Pistachio Nuts" %}</h4>
                                 </div>
                                 <div class="col">
-                                    <img class="c-img" src="{% static 'zone/img/lots-of-nuts.png' %}" alt="5 slide">
+                                    <img class="c-img" src="{% static 'zone/img/peanut1.jpg' %}" alt="5 slide">
                                     <h4>{% trans "Peanuts" %}</h4>
                                 </div>
                                 <div class="col">
-                                    <img class="c-img" src="{% static 'zone/img/arabic.jpg' %}" alt="6 slide">
-                                    <h4>{% trans "Arabic Gum" %}</h4>
+                                    <img class="c-img" src="{% static 'zone/img/gum-arabic.jpg' %}" alt="6 slide">
+                                    <h4>{% trans "Arabica Gum" %}</h4>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                                     <h4>{% trans "Ginger" %}</h4>
                                 </div>
                                 <div class="col">
-                                    <img class="c-img" src="{% static 'zone/img/hibiscus.jpg' %}" alt="8 slide">
+                                    <img class="c-img" src="{% static 'zone/img/hibiscus1.jpg' %}" alt="8 slide">
                                     <h4>{% trans "Hibiscus" %}</h4>
                                 </div>
                                 <div class="col">
