--- a/zone/static/zone/styles.css
+++ b/zone/static/zone/styles.css
@@ -1,7 +1,7 @@
 body{
     background-image: url("img/234.jpg");
     background-attachment: fixed;
-    background-position: center;
+    background-position: 50% 55%;
     background-repeat: no-repeat;
     background-size: 30%;
     padding-top: 0%;
